--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,8 +4,12 @@ logging:
 
 spring:
   jpa:
+    show-sql: true
     hibernate:
       ddl-auto: create-drop
+    properties:
+      hibernate:
+        format_sql: false
   datasource:
     url:
     username:
