--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,3 +3,7 @@ spring:
     url: jdbc:postgresql://localhost:5432/spring-boot-template
     username: superuser
     password: password
+  jpa:
+    properties:
+      hibernate:
+        format_sql: true
