--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
       ddl-auto: create-drop
     properties:
       hibernate:
-        format_sql: false
+        format_sql: true
   datasource:
     url:
     username:
